name:                eliningen
version:             0.1.0.0
homepage:            https://github.com/aiya000/eliningen
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , containers
                     , text
  default-language:    Haskell2010
  exposed-modules:     Elin.Main
                     , Elin.Parser
                     , Elin.Type

executable elin-run
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , eliningen
