name:                eliningen
version:             0.1.0.0
homepage:            https://github.com/aiya000/eliningen
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , safe
                     , safe-exceptions
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind
  exposed-modules:     Elin.Main
                     , Elin.Eval
                     , Elin.Eval.Type
                     , Elin.Eval.Type.ProgramStack
                     , Elin.Parser
                     , Elin.Parser.Type
                     , Elin.Type

executable elin
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing -Wno-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , eliningen
