name:                zuramaru
version:             0.1.0.0
homepage:            https://github.com/aiya000/eliningen
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , readline
                     , safe
                     , safe-exceptions
                     , text
                     , text-show
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-type-defaults
  exposed-modules:     Maru.Main
                     , Maru.Eval
                     , Maru.Eval.Type
                     , Maru.Eval.Type.ProgramStack
                     , Maru.Parser
                     , Maru.Parser.Type
                     , Maru.Type

executable maru
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , zuramaru

test-suite maru-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-type-defaults
  other-modules:       Steps.Step1Test
  build-depends:       base
                     , tasty
                     , tasty-discover
                     , tasty-hunit
                     , text
                     , zuramaru
