name:                zuramaru
version:             0.1.0.0
homepage:            https://github.com/aiya000/eliningen
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , cmdargs
                     , containers
                     , either
                     , extensible-effects
                     , extra
                     , megaparsec
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , readline
                     , safe
                     , safe-exceptions
                     , template-haskell
                     , text
                     , text-show
                     , throwable-exceptions
                     , transformers
                     , type-iso
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-type-defaults -Wno-orphans -fprint-potential-instances
  exposed-modules:     Maru.Main
                     , Maru.Eval
                     , Maru.Parser
                     , Maru.Type
                     , Maru.Type.Parser
                     , Maru.Type.SExpr

executable maru
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , zuramaru

test-suite maru-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-type-defaults
  other-modules:       DocTest
                     , Steps.Step1Test
                     , Steps.Step2Test
  build-depends:       base
                     , doctest
                     , silently
                     , tasty
                     , tasty-discover
                     , tasty-hunit
                     , text
                     , zuramaru
